--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
 	font:16px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	color:#333;
 }
+
+#impress{
+	background-image: "space.jpg";
+}
 .step { 
 	width:940px; 
 	margin:0 auto 24px auto; 
